[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/pause_menu_selection.gd" type="Script" id=2]

[node name="PauseSelection" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -108.0
margin_right = 118.0
margin_bottom = 108.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 236.0
margin_bottom = 216.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_right = 196.0
margin_bottom = 216.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 49.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
focus_neighbour_left = NodePath("../../MarginContainer4/QuitToTilteButton")
focus_neighbour_top = NodePath("../../MarginContainer4/QuitToTilteButton")
focus_neighbour_right = NodePath("../../MarginContainer2/RestartButton")
text = "Вернуться"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 156.0
margin_bottom = 102.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
focus_neighbour_left = NodePath("../../MarginContainer/ReturnButton")
focus_neighbour_right = NodePath("../../MarginContainer3/SettingsButton")
text = "Начать сначала"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 156.0
margin_bottom = 110.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 156.0
margin_bottom = 163.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
focus_neighbour_left = NodePath("../../MarginContainer2/RestartButton")
focus_neighbour_right = NodePath("../../MarginContainer4/QuitToTilteButton")
text = "Настройки"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 156.0
margin_bottom = 216.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="QuitToTilteButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
focus_neighbour_left = NodePath("../../MarginContainer3/SettingsButton")
focus_neighbour_right = NodePath("../../MarginContainer/ReturnButton")
focus_neighbour_bottom = NodePath("../../MarginContainer/ReturnButton")
text = "В главное меню"

[connection signal="visibility_changed" from="." to="." method="_on_PauseSelection_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/QuitToTilteButton" to="." method="_on_QuitToTilteButton_pressed"]
